# geodesic

./: .gitignore  CMakeLists.txt  README.md  build.sh
external1/.cache/CoMISo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CoMISo-download.sln  CoMISo-download.vcxproj  CoMISo-download.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
external1/.cache/eigen/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  eigen-download.sln  eigen-download.vcxproj  eigen-download.vcxproj.filters
external1/.cache/embree/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  embree-download.sln  embree-download.vcxproj  embree-download.vcxproj.filters
external1/.cache/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad-download.sln  glad-download.vcxproj  glad-download.vcxproj.filters
external1/.cache/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glfw-download.sln  (+2 more)
tutorial/: CMakeLists.txt
tutorial/geodesic/: CMakeLists.txt  main.cpp
tutorial/geodesic/sdk/: BaseModel.cpp  BaseModel.h  CreateCylinder.hpp  DistanceApproach.h  Distance_OBB.cpp  Distance_OBB.h  ExactDGPMethod.cpp  ExtractIsolines.hpp  Non_Linear_Optimization.h  Parameters.h  Point3D.h  RichModel.cpp  RichModel.h  VectorOperations.cpp  VectorOperations.h  deformation_path.h  dijkstra.cpp  dijkstra.h  geodesic2_3.h  lbfgs.h  path_project.cpp  path_project.h
(+112 files in other folders)
